Bascule des KPIs Global Activity et Revenue Summary

--- a/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_KPI_ADJUSTMENT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -40
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -35,7 +35,7 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ADJUSTMENT_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_ADJUSTMENT"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.SPARK_IT_ZTE_ADJUSTMENT"
 flux.hive.extra-conf += "--hivevar it_partition_column=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
