--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -214,19 +214,19 @@ cronmanagerId = "002"
 //--###        CALCULS OTARIE
 //--###**************************************#####---
 // FT_OTARIE_DATA_TRAFFIC_DAY
-crontasks +=
-  {
-    instanceId = "LOAD_FT_OTARIE_DATA_TRAFFIC_DAY",
-    cron = "0 12 */1 * * ?",
-    configFile = "/PROD/CONF/OTARIE/FT/load-ft-otarie-data-traffic-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_OTARIE_DATA_TRAFFIC_DAY",
+//    cron = "0 12 */1 * * ?",
+//    configFile = "/PROD/CONF/OTARIE/FT/load-ft-otarie-data-traffic-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement KPI_ADJUSTMENT
 //crontasks +=
@@ -293,19 +293,19 @@ crontasks +=
 //  }
 
 // Chargement LOAD_FT_SUBSCRIPTION_MSISDN_DAY
-crontasks +=
-  {
-    instanceId = "LOAD_FT_SUBSCRIPTION_MSISDN_DAY",
-    cron = "55 10/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription-msisdn-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_SUBSCRIPTION_MSISDN_DAY",
+//    cron = "55 10/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription-msisdn-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement LOAD_FT_GSM_TRAFFIC_REVENUE_DAILY
