--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -304,33 +304,33 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_OTHER_VAS",
-    cron = "0 36 */3 * * ?",
-    configFile = "/PROD/CONF/VAS/load-ft-other-vas.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx256m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_OTHER_VAS",
+//    cron = "0 36 */3 * * ?",
+//    configFile = "/PROD/CONF/VAS/load-ft-other-vas.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx256m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "FT_VAS_REVENUE_DAILY",
-    cron = "0 38 */1 * * ?",
-    configFile = "/PROD/CONF/VAS/load-ft-vas-revenue-detail.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "FT_VAS_REVENUE_DAILY",
+//    cron = "0 38 */1 * * ?",
+//    configFile = "/PROD/CONF/VAS/load-ft-vas-revenue-detail.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //crontasks +=
@@ -403,19 +403,19 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_ACTIVATION_ALL_BY_DAY",
-    cron = "0 50 */1 * * ?",
-    configFile = "/PROD/CONF/RIA/load-activation-all-by-day.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_ACTIVATION_ALL_BY_DAY",
+//    cron = "0 50 */1 * * ?",
+//    configFile = "/PROD/CONF/RIA/load-activation-all-by-day.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
@@ -431,20 +431,20 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-  instanceId = "LOAD_FT_CONSO_MSISDN_DAY",
-      cron = "0 54 */1 * * ?",
-      configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-conso-msisdn-day.conf",
-      taskType = "HIVE"
-      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-      timeout = "55 minutes"
-      extraTaskParams : [
-        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-      ]
-
-  }
+//crontasks +=
+//  {
+//  instanceId = "LOAD_FT_CONSO_MSISDN_DAY",
+//      cron = "0 54 */1 * * ?",
+//      configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-conso-msisdn-day.conf",
+//      taskType = "HIVE"
+//      taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//      timeout = "55 minutes"
+//      extraTaskParams : [
+//        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//        , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//      ]
+//
+//  }
 
 crontasks +=
   {
