update conf for ft_14_dailystatus

--- a/PROD/CONF/MONITORING/compute_ft_14_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_ft_14_daily_status.conf
@@ -34,10 +34,10 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_ft_14_daily_status.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_ft_14_daily_status.hql"
 flux.inline.exec-queries += "INSERT INTO MON.SPARK_FT_14_DAILY_STATUS  VALUES('FT_COMMERCIAL_SUBSCRIB_SUMMARY','OK','OK','OK','OK','OK','OK','OK','OK','NOK','OK','OK','OK','OK','OK','2020-01-10 17:52:40',CURRENT_DATE)"
-flux.inline.exec-queries += "ALTER TABLE MON.SPARK_FT_14_DAILY_STATUS DROP PARTITION( TABLE_DATE = CURRENT_DATE)"
-flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_ft_14_daily_status.hql"
+flux.inline.exec-queries += "ALTER TABLE MON.SPARK_FT_14_DAILY_STATUS DROP PARTITION( EVENT_DATE = CURRENT_DATE)"
+flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_ft_14_daily_status.hql"
 
 
 
