Bascule des tables du delta (début)

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -259,19 +259,19 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_IMEI_ONLINE",
-    cron = "0 15 */1 * * ?",
-    configFile = "/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_IMEI_ONLINE",
+//    cron = "0 15 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -790,50 +790,50 @@ crontasks +=
 
 
 //// CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
-crontasks +=
-  {
-    instanceId = "COMPUTE_FT_DAILY_STATUS",
-    cron = "0 44/20 * * * ?",
-    configFile = "/PROD/CONF/MONITORING/compute_ft_daily_status.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "120 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_FT_DAILY_STATUS",
+//    cron = "0 44/20 * * * ?",
+//    configFile = "/PROD/CONF/MONITORING/compute_ft_daily_status.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "120 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //// CALCUL DU REVENUE MARKETING POUR NOTIF
-crontasks +=
-  {
-    instanceId = "COMPUTE_REVENUE_MARKETING",
-    cron = "0 45 */1 * * ?",
-    configFile = "/PROD/CONF/NOTIFICATION/revenu_marketing.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_REVENUE_MARKETING",
+//    cron = "0 45 */1 * * ?",
+//    configFile = "/PROD/CONF/NOTIFICATION/revenu_marketing.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //// CALCUL DU SMS USAGE
-crontasks +=
-  {
-    instanceId = "COMPUTE_SMS_USAGE",
-    cron = "0 46 */1 * * ?",
-    configFile = "/PROD/CONF/NOTIFICATION/sms_usage.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_SMS_USAGE",
+//    cron = "0 46 */1 * * ?",
+//    configFile = "/PROD/CONF/NOTIFICATION/sms_usage.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
@@ -872,34 +872,34 @@ crontasks +=
 
 
 //// CALCUL DU SMS PARC
-crontasks +=
-{
-  instanceId = "COMPUTE_SMS_PARC",
-  cron = "0 49 */1 * * ?",
-  configFile = "/PROD/CONF/NOTIFICATION/sms_parc.conf",
-  taskType = "HIVE"
-  taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-  timeout = "30 minutes"
-  extraTaskParams : [
-    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-    , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-  ]
- }
+//crontasks +=
+//{
+//  instanceId = "COMPUTE_SMS_PARC",
+//  cron = "0 49 */1 * * ?",
+//  configFile = "/PROD/CONF/NOTIFICATION/sms_parc.conf",
+//  taskType = "HIVE"
+//  taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//  timeout = "30 minutes"
+//  extraTaskParams : [
+//    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//    , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//  ]
+// }
 
  //// CALCUL DU SMS OM
- crontasks +=
- {
-   instanceId = "COMPUTE_SMS_OM",
-   cron = "0 50 */1 * * ?",
-   configFile = "/PROD/CONF/NOTIFICATION/sms_om.conf",
-   taskType = "HIVE"
-   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-   timeout = "30 minutes"
-   extraTaskParams : [
-     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-     , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-   ]
-  }
+// crontasks +=
+// {
+//   instanceId = "COMPUTE_SMS_OM",
+//   cron = "0 50 */1 * * ?",
+//   configFile = "/PROD/CONF/NOTIFICATION/sms_om.conf",
+//   taskType = "HIVE"
+//   taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//   timeout = "30 minutes"
+//   extraTaskParams : [
+//     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//     , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//   ]
+//  }
 
 
 crontasks +=
@@ -1044,18 +1044,18 @@ crontasks +=
 
 
 //crontasks +=
- // {
- //   instanceId = "LOAD_FT_MARKETING_DATAMART",
- //   cron = "0 53 */1 * * ?",
- //   configFile = "/PROD/CONF/DATAMART/load-ft-marketing-datamart.conf",
-  //  taskType = "HIVE"
-  //  taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-  //  timeout = "60 minutes"
-  //  extraTaskParams : [
-  //    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-   //   , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-   // ]
-  //}
+//  {
+//    instanceId = "LOAD_FT_MARKETING_DATAMART",
+//    cron = "0 53 */1 * * ?",
+//    configFile = "/PROD/CONF/DATAMART/load-ft-marketing-datamart.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // crontasks +=
