--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -260,19 +260,19 @@ cronmanagerId = "008"
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_LAST_UPDATE_EC_EXTRACT",
-    cron = "0 28 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-last-update-ec-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_LAST_UPDATE_EC_EXTRACT",
+//    cron = "0 28 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-last-update-ec-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 //crontasks +=
@@ -347,33 +347,33 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
-  {
-    instanceId = "COMPUTE_IN_SMS_FICHIERS",
-    cron = "0 00 05-08 * * ? *",
-    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_IN_SMS_FICHIERS",
+//    cron = "0 00 05-08 * * ? *",
+//    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers_in.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
-crontasks +=
-  {
-    instanceId = "COMPUTE_SMS_FICHIERS",
-    cron = "0 00 05-08 * * ? *",
-    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_SMS_FICHIERS",
+//    cron = "0 00 05-08 * * ? *",
+//    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_fichiers.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
@@ -389,19 +389,19 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "COMPUTE_SMS_SPOOL",
-    cron = "0 00 08-10 * * ? *",
-    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_spool.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "COMPUTE_SMS_SPOOL",
+//    cron = "0 00 08-10 * * ? *",
+//    configFile = "/PROD/CONF/NOTIFICATION/compute_sms_spool.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
@@ -474,19 +474,19 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CELL_TRAFIC_DAYLY",
-    cron = "0 48 */1 * * ?",
-    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-ft-cell-trafic-dayly.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CELL_TRAFIC_DAYLY",
+//    cron = "0 48 */1 * * ?",
+//    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-ft-cell-trafic-dayly.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //crontasks +=
 //  {
