--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-ft-cell-trafic-dayly.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-ft-cell-trafic-dayly.conf
@@ -1,19 +1,16 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-
-
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-
-flux.name = "COMPUTE_SPARK_GLOBAL_ACTIVITY_DAILY_STATUS"
+flux.name = "LOAD_SPARK_FT_CELL_TRAFIC_DAYLY"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
-flux.slice-end-value = 0
+flux.slice-begin-value = -180
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -23,14 +20,22 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_global_activity_daily_status.hql"
 
-flux.inline.exec-queries += "DELETE FROM MON.GLOBAL_ACTIVITY_DAILY_STATUS WHERE TRANSACTION_DATE = '###SLICE_VALUE###'"
-flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_global_activity_daily_status.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_CELL_TRAFIC_DAYLY/prequery_spark_ft_cell_trafic_dayly.hql"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
+flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
+
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_CELL_TRAFIC_DAYLY/compute_and_insert_spark_ft_cell_trafic_dayly.hql"
+
+
+
+
 
