--- a/PROD/CONF/NOTIFICATION/compute_spark_sms_spool.conf
+++ b/PROD/CONF/NOTIFICATION/compute_spark_sms_spool.conf
@@ -1,19 +1,16 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-
-
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
-
-flux.name = "COMPUTE_SPARK_GLOBAL_ACTIVITY_DAILY_STATUS"
+flux.name = "COMPUTE_SPARK_SMS_SPOOL"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
-flux.slice-end-value = 0
+flux.slice-begin-value = -1
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -21,16 +18,18 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_global_activity_daily_status.hql"
 
-flux.inline.exec-queries += "DELETE FROM MON.GLOBAL_ACTIVITY_DAILY_STATUS WHERE TRANSACTION_DATE = '###SLICE_VALUE###'"
-flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_global_activity_daily_status.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/NOTIFICATION/prequery_spark_sms_spool.hql"
+
+flux.exec-queries += "/PROD/SCRIPTS/NOTIFICATION/compute_spark_sms_spool.hql"
+
 
