--- a/PROD/CONF/MONITORING/compute_ft_14_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_ft_14_daily_status.conf
@@ -14,7 +14,7 @@ flux.name = "COMPUTE_SPARK_FT_14_DAILY_STATUS"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -2
+flux.slice-begin-value = -15
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -35,7 +35,7 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_ft_14_daily_status.hql"
-flux.inline.exec-queries += "INSERT INTO MON.SPARK_14_FT_DAILY_STATUS  VALUES('FT_COMMERCIAL_SUBSCRIB_SUMMARY','12','12','12','12','12','12','12','12','0','12','12','12','12','12','2020-01-10 17:52:40','###SLICE_VALUE###')"
+flux.inline.exec-queries += "INSERT INTO MON.SPARK_14_FT_DAILY_STATUS  VALUES('FT_COMMERCIAL_SUBSCRIB_SUMMARY','12','12','12','12','12','12','12','12','12','0','12','12','12','12','12','2020-01-10 17:52:40','###SLICE_VALUE###')"
 flux.inline.exec-queries += "ALTER TABLE MON.SPARK_14_FT_DAILY_STATUS DROP PARTITION(EVENT_DATE = '###SLICE_VALUE###')"
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_ft_14_daily_status.hql"
 
