Néttoyage de certains fichiers de configuration

--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-a-revenu-site-amn.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-a-revenu-site-amn.conf
@@ -5,7 +5,6 @@ flux.spark.setup-conf = []
 
 flux.setup-conf = []
 
-
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
@@ -23,9 +22,9 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/prequery_spark_ft_a_revenu_site_amn.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -38,14 +37,8 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION  IF EXISTS fn_hex2deci"
 flux.inline.exec-queries += "create temporary function fn_hex2deci as 'cm.orange.bigdata.udf.fn_hex2deci'"
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/prequery_spark_ft_a_revenu_site_amn.hql"
-
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/compute_and_insert_into_spark_ft_a_revenu_site_amn.hql"
 
-
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-
-// Prequery variables
 
 
 
