--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-data-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-data-da-usage-daily.conf
@@ -1,20 +1,22 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
+
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
+
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
 
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
 
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_DATA_DA_USAGE_DAILY"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_DATA_DA_USAGE_DAILY"}
 
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_DATA_DA_USAGE_DAILY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_DATA_DA_USAGE_DAILY"}
 
-flux.spark.setup-conf += {"key": "table_partition", "value": "SESSION_DATE"}
+flux.spark.setup-var += {"key": "table_partition", "value": "SESSION_DATE"}
 
 flux.name = "LOAD_SPARK_FT_TEST_DA_USAGE_DAILY"
 
@@ -31,10 +33,6 @@ flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
-
-flux.exec-query.execution.mode = "JDBC"
-
-
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_ft_data_da_usage_daily.hql"
 
@@ -55,7 +53,3 @@ flux.inline.post-exec-queries += "MERGE INTO MON.SPARK_TT_DATA_DA_USAGE_DAILY AS
 flux.inline.post-exec-queries += "INSERT  INTO MON.SPARK_FT_DATA_DA_USAGE_DAILY PARTITION(SESSION_DATE) SELECT * FROM MON.SPARK_TT_DATA_DA_USAGE_DAILY"
 flux.inline.post-exec-queries += "TRUNCATE TABLE MON.SPARK_TT_DATA_DA_USAGE_DAILY"
 
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
