--- a/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-voice-sms-da-usage-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/DA_USAGE_DAILY/load-spark-ft-voice-sms-da-usage-daily.conf
@@ -1,21 +1,17 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
+
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_VOICE_SMS_DA_USAGE_DAILY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_VOICE_SMS_DA_USAGE_DAILY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "TRANSACTION_DATE"}
-
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_VOICE_SMS_DA_USAGE_DAILY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_VOICE_SMS_DA_USAGE_DAILY"}
+flux.spark.setup-var += {"key": "table_partition", "value": "TRANSACTION_DATE"}
 
 flux.name = "LOAD_SPARK_FT_VOICE_SMS_DA_USAGE_DAILY"
 
@@ -33,13 +29,10 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.exec-query.execution.mode = "JDBC"
-
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/prequery_spark_ft_voice_sms_da_usage_daily.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION  EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.inline.exec-queries += "TRUNCATE TABLE MON.SPARK_TT_VOICE_SMS_DA_USAGE_DAILY"
 
@@ -48,12 +41,3 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/DA_USAGE_DAILY/compute_and_insert_int
 flux.inline.post-exec-queries += "MERGE INTO MON.SPARK_TT_VOICE_SMS_DA_USAGE_DAILY AS a USING DIM.DT_BALANCE_TYPE_ITEM AS b ON b.ACCT_ITEM_TYPE_ID = a.DA_NAME WHEN  MATCHED  THEN UPDATE SET DA_NAME= UPPER(b.ACCT_RES_NAME),DA_UNIT=UPPER(b.ACCT_RES_RATING_UNIT),DA_TYPE=UPPER(b.ACCT_RES_RATING_TYPE)"
 flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_FT_VOICE_SMS_DA_USAGE_DAILY PARTITION(TRANSACTION_DATE)  SELECT * FROM MON.SPARK_TT_VOICE_SMS_DA_USAGE_DAILY"
 flux.inline.post-exec-queries += "TRUNCATE TABLE MON.SPARK_TT_VOICE_SMS_DA_USAGE_DAILY"
-
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-
-
-
