--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-gsm-traffic-revenue-daily.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-gsm-traffic-revenue-daily.conf
@@ -35,6 +35,7 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=2"
 flux.inline.exec-queries += "ADD JAR hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 
 flux.inline.exec-queries += "ANALYZE TABLE MON.SPARK_FT_BILLED_TRANSACTION_PREPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
