--- a/PROD/CONF/VAS/load-spark-ft-other-vas.conf
+++ b/PROD/CONF/VAS/load-spark-ft-other-vas.conf
@@ -30,5 +30,6 @@ flux.has-post-queries = false
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/VAS/prequery_spark_ft_other_vas.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/VAS/compute_and_insert_into_spark_ft_other_vas.hql"
