--- a/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf
+++ b/PROD/CONF/ZEBRA/FT/load-spark-ft-refill.conf
@@ -39,9 +39,9 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/prequery_spark_ft_ref
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/prequery_spark_completude_zebra_transac.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_OPERATOR_CODE"
 flux.inline.exec-queries += "create temporary function GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/compute_and_insert_into_spark_ft_refill.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/spark_compute_and_insert_refill_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/spark_compute_and_insert_kpi_refill.hql"
