--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf
@@ -3,19 +3,15 @@ flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_ACCOUNT_ACTIVITY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_ACCOUNT_ACTIVITY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "EVENT_DATE"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_ACCOUNT_ACTIVITY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_ACCOUNT_ACTIVITY"}
+flux.spark.setup-var += {"key": "table_partition", "value": "EVENT_DATE"}
 
 flux.name = "LOAD_SPARK_FT_ACCOUNT_ACTIVITY"
 
@@ -33,14 +29,12 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
-flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/prequery_spark_ft_account_activity.hql"
+
+flux.inline.exec-queries += "set hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
-
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/prequery_spark_ft_account_activity.hql"
-
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS fn_get_sorted_list_item"
 flux.inline.exec-queries += "create temporary function fn_get_sorted_list_item as 'cm.orange.bigdata.udf.FnGetSortedListItem'"
@@ -49,13 +43,4 @@ flux.inline.exec-queries += "create temporary function fn_format_msisdn_to_9digi
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 
-
 flux.exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/compute_and_insert_spark_ft_account_activity.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
-
-
-// Prequery variables
-
-
-
-
