--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity1.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity1.conf
@@ -1,20 +1,17 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
+
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_ACCOUNT_ACTIVITY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_ACCOUNT_ACTIVITY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "EVENT_DATE"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_ACCOUNT_ACTIVITY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_ACCOUNT_ACTIVITY"}
+flux.spark.setup-var += {"key": "table_partition", "value": "EVENT_DATE"}
 
 flux.name = "SPARK_FT_ACCOUNT_ACTIVITY1"
 
@@ -32,8 +29,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/prequery_spark_ft_account_activity.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
@@ -44,7 +39,5 @@ flux.inline.exec-queries += "create temporary function fn_format_msisdn_to_9digi
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 
-
 flux.exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/compute_and_insert_spark_ft_account_activity.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
