--- a/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-og-ic-call-snapshot.conf
+++ b/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-og-ic-call-snapshot.conf
@@ -3,19 +3,15 @@ flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_ACCOUNT_ACTIVITY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_ACCOUNT_ACTIVITY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "EVENT_DATE"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_ACCOUNT_ACTIVITY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_ACCOUNT_ACTIVITY"}
+flux.spark.setup-var += {"key": "table_partition", "value": "EVENT_DATE"}
 
 flux.name = "SPARK_FT_OG_IC_CALL_SNAPSHOT"
 
@@ -33,8 +29,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/prequery_spark_ft_og_ic_call_snapshot.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
@@ -50,6 +44,3 @@ flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION
 flux.inline.exec-queries += "TRUNCATE TABLE MON.SPARK_TMP_OG_IC_CALL_SNAPSHOT_PRE"
 flux.exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/compute_and_insert_mon_spark_tmp_og_ic_call_snapshot_pre.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/ACCOUNT_ACTIVITY/compute_and_insert_mon_spark_ft_og_ic_call_snapshot.hql"
-
-
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
