--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf
@@ -28,7 +28,9 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/prequery_spark_ft_amn_local_traffic_day.hql"
+
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
@@ -36,8 +38,4 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/compute_and_insert_into_spark_ft_amn_local_traffic_day.hql"
-
-
-
