--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-cust-insigth-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-cust-insigth-daily.conf
@@ -2,19 +2,15 @@ flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_CBM_CUST_INSIGTH_DAILY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_CBM_CUST_INSIGTH_DAILY "}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "PERIOD"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_CBM_CUST_INSIGTH_DAILY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_CBM_CUST_INSIGTH_DAILY "}
+flux.spark.setup-var += {"key": "table_partition", "value": "PERIOD"}
 
 flux.name = "LOAD_SPARK_FT_CBM_CUST_INSIGTH_DAILY"
 
@@ -32,8 +28,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/CUST_INSIGTH/prequery_spark_ft_cbm_cust_insigth_daily.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
@@ -42,8 +36,3 @@ flux.inline.exec-queries += "create temporary function fn_nnp_remove_rn as 'cm.o
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS fn_get_nnp_msisdn_simple_destn"
 flux.inline.exec-queries += "create temporary function fn_get_nnp_msisdn_simple_destn as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/CUST_INSIGTH/compute_and_insert_into_spark_ft_cbm_cust_insigth_daily.hql"
-
-
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
