--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-last-site-day.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-last-site-day.conf
@@ -3,19 +3,15 @@ flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_CLIENT_LAST_SITE_DAY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_CLIENT_LAST_SITE_DAY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "EVENT_DATE"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_CLIENT_LAST_SITE_DAY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_CLIENT_LAST_SITE_DAY"}
+flux.spark.setup-var += {"key": "table_partition", "value": "EVENT_DATE"}
 
 flux.name = "LOAD_SPARK_FT_CLIENT_LAST_SITE_DAY"
 
@@ -31,24 +27,20 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
-
-flux.exec-query.execution.mode = "JDBC"
+flux.has-post-queries = true
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/prequery_spark_ft_client_last_site_day.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
 flux.inline.exec-queries += "create temporary function fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
-
-
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_LAST_SITE_DAY"
+
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_spark_ft_client_last_site_day_part1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_spark_ft_client_last_site_day_part2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_LAST_SITE_DAY/compute_and_insert_into_spark_ft_client_last_site_day_part3.hql"
-flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_LAST_SITE_DAY"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_LAST_SITE_DAY"
 
