--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-site-traffic-day.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-site-traffic-day.conf
@@ -3,19 +3,15 @@ flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "table_type", "value": "FT"}
-
-flux.spark.setup-conf += {"key": "table_name", "value": "SPARK_FT_CLIENT_SITE_TRAFFIC_DAY"}
-
-flux.spark.setup-conf += {"key": "database_table_name", "value": "MON.SPARK_FT_CLIENT_SITE_TRAFFIC_DAY"}
-
-flux.spark.setup-conf += {"key": "table_partition", "value": "EVENT_DATE"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "table_type", "value": "FT"}
+flux.spark.setup-var += {"key": "table_name", "value": "SPARK_FT_CLIENT_SITE_TRAFFIC_DAY"}
+flux.spark.setup-var += {"key": "database_table_name", "value": "MON.SPARK_FT_CLIENT_SITE_TRAFFIC_DAY"}
+flux.spark.setup-var += {"key": "table_partition", "value": "EVENT_DATE"}
 
 flux.name = "LOAD_SPARK_FT_CLIENT_SITE_TRAFFIC_DAY"
 
@@ -33,30 +29,21 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
-
-
-
-flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
-flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION  EXISTS FN_GET_OPERATOR_CODE"
-flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/prequery_spark_ft_client_site_traffic_day.hql"
 
-
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION  EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
-
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_CELL_TRAFIC_DAY"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_CELL_TRAFIC_DAY"
+
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/compute_and_insert_into_spark_tt_client_cell_trafic_day.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/CBM/FT_CLIENT_SITE_TRAFFIC_DAY/compute_and_insert_into_spark_ft_client_site_traffic_day.hql"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_TT_CLIENT_CELL_TRAFIC_DAY"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 
 
