--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf
@@ -1,8 +1,8 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE" // Possible values are HDFS, HIVE
-flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
 
 flux.spark.setup-conf = []
 
@@ -11,13 +11,13 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+
 flux.spark.setup-var +=  {"key": "cdr_type","value": "ZTE_DATA_CDR"}
 flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_DATA"}
 flux.spark.setup-var +=  {"key": "it_partition_column","value": "FILE_DATE"}
 flux.spark.setup-var +=  {"key": "date_offset","value": 0}
 flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
-
 
 flux.name = "LOAD_SPARK_FT_DATA"
 
@@ -35,8 +35,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_spark_ft_data.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
 
@@ -47,8 +45,6 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
-
-
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
