--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-overdraft.conf
@@ -39,5 +39,6 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/prequery_spark_ft_ov
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/prequery_completude_spark_overdraft.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/compute_and_insert_into_spark_ft_overdraft.hql"
