--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-recharge.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-recharge.conf
@@ -1,19 +1,19 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
+
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 
-flux.spark.setup-conf += {"key": "date_offset", "value": "32"}
-
-flux.spark.setup-conf += {"key": "cdr_type", "value": "ZTE_RECHARGE_CDR"}
-flux.spark.setup-conf += {"key": "it_table_name", "value": "CDR.SPARK_IT_ZTE_RECHARGE"}
-flux.spark.setup-conf += {"key": "it_partition_column", "value": "FILE_DATE"}
-flux.spark.setup-conf += {"key": "date_offset", "value": "7"}
-flux.spark.setup-conf += {"key": "flux_type", "value": "PREPAID"}
-flux.spark.setup-conf += {"key": "check_file_regex", "value": "IN_ZTE_CHECK_FILELIST_2"}
+flux.spark.setup-var += {"key": "date_offset", "value": "32"}
+flux.spark.setup-var += {"key": "cdr_type", "value": "ZTE_RECHARGE_CDR"}
+flux.spark.setup-var += {"key": "it_table_name", "value": "CDR.SPARK_IT_ZTE_RECHARGE"}
+flux.spark.setup-var += {"key": "it_partition_column", "value": "FILE_DATE"}
+flux.spark.setup-var += {"key": "date_offset", "value": "7"}
+flux.spark.setup-var += {"key": "flux_type", "value": "PREPAID"}
+flux.spark.setup-var += {"key": "check_file_regex", "value": "IN_ZTE_CHECK_FILELIST_2"}
 
 flux.name = "LOAD_SPARK_FT_RECHARGE"
 
@@ -31,7 +31,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
@@ -45,4 +44,3 @@ flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS GET_NNP_MSISDN_9
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/compute_and_insert_into_spark_ft_recharge.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
