--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms-post.conf
@@ -1,8 +1,8 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE" // Possible values are HDFS, HIVE
-flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
 
 flux.spark.setup-conf = []
 
@@ -47,11 +47,10 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS_POST/compute_and_insert_into_spark_ft_billed_transaction_postpaid.hql"
 
-//flux.inline.post-exec-queries += "ANALYZE TABLE MON.SPARK_FT_BILLED_TRANSACTION_POSTPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "ALTER TABLE AGG.SPARK_FT_GSM_TRAFFIC_REVENUE_POST DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
 
 flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.post-exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GSM_TRAFFIC_REVENUE/insert_into_spark_ft_gsm_traffic_revenue_post.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/spark_compute_and_insert_gsm_post_activity.hql"
