--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-voice-sms.conf
@@ -1,14 +1,12 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-
-flux.input-type = "HIVE" // Possible values are HDFS, HIVE
-flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
 
 flux.spark.setup-conf = []
 
 flux.setup-conf = []
-
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
@@ -17,7 +15,6 @@ flux.spark.setup-var += {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_VOICE
 flux.spark.setup-var += {"key": "it_partition_column","value": "FILE_DATE"}
 flux.spark.setup-var += {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var += {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
-
 
 flux.name = "LOAD_SPARK_FT_VOICE_SMS"
 
