--- a/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf
@@ -18,7 +18,6 @@ flux.spark.setup-var +=  {"key": "it_partition_column","value": "CREATE_DATE"}
 flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
 
-
 flux.name = "LOAD_SPARK_KPI_ADJUSTMENT"
 
 flux.has-date-processing = true
@@ -39,9 +38,8 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_ft_adjustement.
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/spark_compute_and_insert_adjustement_activity.hql"
 
-flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.post-exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/spark_compute_and_insert_kpi_adjustement.hql"
