--- a/PROD/CONF/VAS/load-spark-ft-vas-revenue-detail.conf
+++ b/PROD/CONF/VAS/load-spark-ft-vas-revenue-detail.conf
@@ -28,7 +28,9 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/VAS/prequery_spark_ft_vas_revenue_detail.hql"
+
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_FORMAT_MSISDN_TO_9DIGITS"
 flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/VAS/compute_and_insert_into_spark_ft_vas_revenue_detail.hql"
