Correction des fichiers de Conf de missing files

--- a/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_extract_missing_files.conf
@@ -33,9 +33,8 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_missing_files.
 
 flux.inline.exec-queries += "DELETE FROM MON.MISSING_FILES WHERE ORIGINAL_FILE_DATE = '###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE='EXTRACT'"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE_FROM_INTERVALE"
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
 
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_missing_extract_files.hql"
 flux.inline.post-exec-queries += "MERGE INTO MON.MISSING_FILES_STATUS AS A USING  (SELECT 'EXTRACT' job_source,if(COUNT(*)=0,'OK','NOK') status,current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE='EXTRACT') as B ON b.job_source = a.job_source and a.ORIGINAL_FILE_DATE = b.ORIGINAL_FILE_DATE WHEN MATCHED  THEN UPDATE SET STATUS = b.STATUS WHEN NOT MATCHED THEN INSERT VALUES (b.job_source,b.status,b.insert_date,'###SLICE_VALUE###') "
-
-
