modif spark_ft_cra_gprs_post

--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-cra-gprs-post.conf
@@ -14,17 +14,12 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.spark.setup-var +=  {"key": "cdr_type","value": "ZTE_DATA_POST_CDR"}
-flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.IT_ZTE_DATA_POST"}
+flux.spark.setup-var +=  {"key": "it_table_name","value": "CDR.SPARK_IT_ZTE_DATA_POST"}
 flux.spark.setup-var +=  {"key": "it_partition_column","value": "START_DATE"}
 flux.spark.setup-var +=  {"key": "date_offset","value": 60}
 flux.spark.setup-var +=  {"key": "flux_type","value": "POSTPAID"}
 flux.spark.setup-var +=  {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_POSTPAID_2"}
 
-flux.spark.setup-var +=  {"key": "table_type","value": "FT"}
-flux.spark.setup-var +=  {"key": "table_name","value": "FT_CRA_GPRS_POST"}
-flux.spark.setup-var +=  {"key": "insert_date_column","value": "DWH_FT_ENTRY_DATE"}
-flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.FT_CRA_GPRS_POST"}
-flux.spark.setup-var +=  {"key": "table_partition","value": "SESSION_DATE"}
 
 
 flux.name = "LOAD_SPARK_FT_CRA_GPRS_POST"
@@ -46,7 +41,7 @@ flux.has-post-queries = true
 flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_spark_ft_cra_gprs_post.hql"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_spark_completude.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -62,12 +57,8 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_spark
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.SPARK_FT_CRA_GPRS_POST PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "DELETE FROM AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE = '###SLICE_VALUE###'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity_post.hql"
-//flux.inline.post-exec-queries += "INSERT INTO MON.FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_GPRS_ACTIVITY_POST' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  AGG.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###')T"
-
-//flux.inline.post-exec-queries += "ALTER TABLE AGG.FT_A_GPRS_ACTIVITY_POST DROP PARTITION(DATECODE = '###SLICE_VALUE###')"
-//flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity_post.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_post_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs_post.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/spark_compute_and_insert_gprs_post_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/spark_compute_and_insert_kpi_gprs_post.hql"
 
 
 
