Correction des fichiers de Conf

--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-a-revenu-site-amn.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-a-revenu-site-amn.conf
@@ -32,7 +32,7 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION  IF EXISTS fn_hex2deci"
 flux.inline.exec-queries += "create temporary function fn_hex2deci as 'cm.orange.bigdata.udf.fn_hex2deci'"
