--- a/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft_a_traffic_entrant_amn.conf
+++ b/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft_a_traffic_entrant_amn.conf
@@ -25,7 +25,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -33,7 +32,7 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_A_TRAFFIC_ENTRANT_AMN/prequery_spark_ft_a_traffic_entrant_amn.hql"
 
