--- a/PROD/CONF/MSC/load-spark-ft-ag-interco.conf
+++ b/PROD/CONF/MSC/load-spark-ft-ag-interco.conf
@@ -34,7 +34,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/AG_INTERCO/prequery_spark_complet
 
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "set hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "set hive.enforce.bucketing=true"
+flux.inline.exec-queries += "set hive.enforce.bucketing=false"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
