--- a/PROD/CONF/MONITORING/compute_spark_ft_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_spark_ft_daily_status.conf
@@ -25,14 +25,13 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_ft_daily_status.hql"
 flux.inline.exec-queries += "INSERT INTO MON.SPARK_FT_DAILY_STATUS  VALUES('FT','MSC','FT_COMMERCIAL_SUBSCRIB_SUMMARY','','OK','74377','null','2020-01-10 17:52:40','2020-01-22 17:24:41','###SLICE_VALUE###')"
