--- a/PROD/CONF/VAS/load-spark-ft-a-vas-revenue-daily.conf
+++ b/PROD/CONF/VAS/load-spark-ft-a-vas-revenue-daily.conf
@@ -24,14 +24,13 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
-flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/VAS/prequery_spark_ft_a_vas_revenue_daily.hql"
