--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -259,19 +259,19 @@ cronmanagerId = "002"
 //    ]
 //  }
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_IMEI_ONLINE",
-//    cron = "0 15 */1 * * ?",
-//    configFile = "/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "55 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_IMEI_ONLINE",
+    cron = "0 15 */1 * * ?",
+    configFile = "/PROD/CONF/FT_IMEI_ONLINE/load-ft-imei-online.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 
@@ -687,36 +687,36 @@ crontasks +=
 
 
 
-// CALCUL DES FICHIERS MANQUANTS EXTRACT
-//crontasks +=
-//  {
-//    instanceId = "COMPUTE_EXTRACT_MISSING_FILES",
-//    cron = "0 38 */1 * * ?",
-//    configFile = "/PROD/CONF/MONITORING/compute_extract_missing_files.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "60 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+ CALCUL DES FICHIERS MANQUANTS EXTRACT
+crontasks +=
+  {
+    instanceId = "COMPUTE_EXTRACT_MISSING_FILES",
+    cron = "0 38 */1 * * ?",
+    configFile = "/PROD/CONF/MONITORING/compute_extract_missing_files.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
-// CALCUL DES FICHIERS MANQUANTS OTHERS
-//crontasks +=
-//  {
-//    instanceId = "COMPUTE_OTHERS_MISSING_FILES",
-//    cron = "0 39 */1 * * ?",
-//    configFile = "/PROD/CONF/MONITORING/compute_others_missing_files.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "60 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+ CALCUL DES FICHIERS MANQUANTS OTHERS
+crontasks +=
+  {
+    instanceId = "COMPUTE_OTHERS_MISSING_FILES",
+    cron = "0 39 */1 * * ?",
+    configFile = "/PROD/CONF/MONITORING/compute_others_missing_files.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 
@@ -837,22 +837,22 @@ crontasks +=
 
 
 
-// MONITORING
+ MONITORING
 
-// CALCUL DES FICHIERS MANQUANTS IN
-//crontasks +=
-//  {
-//    instanceId = "COMPUTE_IN_ZTE_MISSING_FILES",
-//    cron = "0 47 */1 * * ?",
-//    configFile = "/PROD/CONF/MONITORING/compute_in_zte_missing_files.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "180 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+ CALCUL DES FICHIERS MANQUANTS IN
+crontasks +=
+  {
+    instanceId = "COMPUTE_IN_ZTE_MISSING_FILES",
+    cron = "0 47 */1 * * ?",
+    configFile = "/PROD/CONF/MONITORING/compute_in_zte_missing_files.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "180 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 // LOAD_KPI_FT_CONTRACT_SNAPSHOT
