Création des jobs de remplissage des tables spark.

--- a/PROD/CONF/POPULATE_SPARK/populate-spark-activation-all-by-day.conf
+++ b/PROD/CONF/POPULATE_SPARK/populate-spark-activation-all-by-day.conf
@@ -1,4 +1,4 @@
-flux.yarn.queue = "DEFAULT"
+flux.yarn.queue = "default"
 flux.log-level = "ERROR"
 
 flux.input-type = "HIVE"
@@ -22,7 +22,7 @@ flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = 0
-flux.slice-end-value = -580
+flux.slice-end-value = -212
 flux.slice-step-value = -30
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -32,11 +32,6 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/BASCULE/prequery.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/POPULATE_SPARK/prequery.hql"
 
-flux.exec-queries += "/PROD/SCRIPTS/BASCULE/insert_query.hql"
-
-
-
-
-
+flux.exec-queries += "/PROD/SCRIPTS/POPULATE_SPARK/insert_query.hql"
